test/error/ast/ImportSelf.mod
MODULE ImportSelf;
IMPORT ImportSelf;
END ImportSelf.
